Bug 493649 - NeoChat crashes on launch
Summary: NeoChat crashes on launch
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-09-25 18:04 UTC by Nate Graham
Modified: 2024-11-10 15:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2024-09-25 18:04:37 UTC
With today's git master, NeoChat crashes on launch. It's built against the tip of the 0.8.x branch in libquotient (last commit on April 15, b7d72fd40c19262b1ed89a063984df1ccb66d83b).

Backtrace:


(gdb) bt
#0  __pthread_kill_implementation
    (threadid=<optimized out>, signo=signo@entry=11, no_tid=no_tid@entry=0)
    at pthread_kill.c:44
#1  0x00007f60bdca86d3 in __pthread_kill_internal (threadid=<optimized out>, signo=11)
    at pthread_kill.c:78
#2  0x00007f60bdc4fc4e in __GI_raise (sig=11) at ../sysdeps/posix/raise.c:26
#3  0x00007f60c1d555ab in KCrash::defaultCrashHandler (sig=11)
    at /home/nate/kde/src/kcrash/src/kcrash.cpp:596
#4  0x00007f60bdc4fd00 in <signal handler called> () at /lib64/libc.so.6
#5  0x00007f60be4450a5 in QJsonObject::valueImpl<QLatin1String> (this=<optimized out>, key=...)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/serialization/qjsonobject.cpp:310
#6  QJsonObject::value (this=0x6e0069006f0052, key=...)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/serialization/qjsonobject.cpp:301
#7  0x00007f60c0b98089 in QJsonObject::operator[] (this=<optimized out>, key=...)
    at /usr/include/qt6/QtCore/qjsonobject.h:61
#8  Quotient::Event::contentJson (this=<optimized out>)
    at /home/nate/kde/src/libquotient/Quotient/events/event.cpp:68
#9  0x00000000005a9078 in Quotient::Event::contentPart<QJsonObject, QLatin1String>
    (this=<optimized out>, key=<optimized out>)
    at /home/nate/kde/usr/include/Quotient/events/event.h:365
#10 PollHandler::kind (this=<optimized out>)
    at /home/nate/kde/src/neochat/src/pollhandler.cpp:144
#11 0x00000000005ab4fb in PollHandler::qt_static_metacall
    (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>)
    at /home/nate/kde/build/neochat/src/neochat_autogen/include/moc_pollhandler.cpp:201
#12 0x00007f60c104a5d9 in QQmlPropertyData::readProperty
    (this=0x3fbe9080, target=0x3b1f78c0, property=0x7ffd85f831d0)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlpropertydata_p.h:349
#13 operator()<QString> (__closure=<synthetic pointer>, v=...)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/jsruntime/qv4qobjectwrapper.cpp:162
#14 QV4::loadProperty (v4=0x3b40e3c0, wrapper=<optimized out>, object=0x3b1f78c0, property=...)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/jsruntime/qv4qobjectwrapper.cpp:186
#15 0x00007f60c104be27 in QV4::QObjectWrapper::virtualResolveLookupGetter
    (object=0x7f6089dbf528, engine=0x3b40e3c0, lookup=0x3fed27b0)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/jsruntime/qv4qobjectwrapper.cpp:1120
#16 0x00007f60c10ae7f1 in QV4::Moth::VME::interpret (frame=0x7ffd85f83070, 
    frame@entry=0x7ffd85f83550, engine=0x3b40e3c0, code=0x951108 <QmlCacheGeneratedCode::_qt_qml_org_kde_neochat_timeline_PollComponent_qml::qmlData+1800> "<6\030\a\0226`\aN\006.7<8<9\030\006\002")
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/jsruntime/qv4vme_moth.cpp:674
#17 0x00007f60c10b2edf in QV4::Moth::VME::exec
    (frame=frame@entry=0x7ffd85f83550, engine=engine@entry=0x3b40e3c0)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/jsruntime/qv4vme_moth.cpp:487
#18 0x00007f60c0ff2646 in QV4::doCall
    (self=<optimized out>, thisObject=thisObject@entry=0x7f6089dbf518, argv=<optimized out>, argc=<optimized out>, context=<optimized out>)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/jsruntime/qv4function.cpp:54
#19 0x00007f60c0ff2b4d in QV4::Function::call
    (this=<optimized out>, thisObject=0x7f6089dbf518, 
    thisObject@entry=0x7f6089dbf500, argv=argv@entry=0x7f6089dbf518, argc=<optimized out>, context=<optimized out>)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/jsruntime/qv4function.cpp:79
#20 0x00007f60c116decc in QQmlJavaScriptExpression::evaluate
    (this=this@entry=0x3b6a92e0, callData=callData@entry=0x7f6089dbf4e8, isUndefined=isUndefined@entry=0x7ffd85f83710)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmljavascriptexpression.cpp:238
#21 0x00007f60c10fddb3 in QQmlBinding::evaluate
    (this=this@entry=0x3b6a92e0, isUndefined=isUndefined@entry=0x7ffd85f83710)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlbinding.cpp:188
#22 0x00007f60c10fdeba in QQmlBinding::doUpdate
    (this=0x3b6a92e0, watcher=..., flags=..., scope=...)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlbinding.cpp:699
#23 0x00007f60c1101d18 in QQmlBinding::update (this=0x3b6a92e0, flags=...)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlbinding.cpp:164
#24 0x00007f60c119f486 in QQmlObjectCreator::finalize (this=0x3fb2d220, interrupt=...)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlobjectcreator.cpp:1508
#25 0x00007f60c1168e5c in QQmlIncubatorPrivate::incubate (this=this@entry=0x3fb45c80, i=...)
    at /usr/include/qt6/QtCore/qscopedpointer.h:90
#26 0x00007f60c1169c0f in QQmlEnginePrivate::incubate
    (this=0x3b44a740, i=<optimized out>, forContext=<optimized out>)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlincubator.cpp:53
#27 0x00007f60c1ecb899 in QQmlDelegateModelPrivate::object
    (this=0x3e8398e0, group=QQmlListCompositor::Default, index=1, incubationMode=<optimized out>)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qmlmodels/qqmldelegatemodel.cpp:1284
#28 0x00007f60c1b6e060 in QQuickRepeaterPrivate::requestItems (this=0x3e5d4360)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickrepeater.cpp:367
#29 0x00007f60c1b70efc in QQuickRepeater::modelUpdated
    (this=0x3fe77c50, changeSet=..., reset=<optimized out>)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickrepeater.cpp:435
#30 0x00007f60c1b715d4 in QQuickRepeater::qt_metacall
    (this=0x3fe77c50, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x7ffd85f83e80)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/redhat-linux-build/src/quick/Quick_autogen/include/moc_qquickrepeater_p.cpp:297
#31 0x00007f60be3fcbda in doActivate<false>
    (sender=0x3e8397d0, signal_index=4, argv=0x7ffd85f83e80)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4112
#32 0x00007f60be3f2bc7 in QMetaObject::activate
    (sender=<optimized out>, m=m@entry=0x7f60c1f177a0 <QQmlInstanceModel::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffd85f83e80)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4146
#33 0x00007f60c1e81df7 in QQmlInstanceModel::modelUpdated
    (this=<optimized out>, _t1=<optimized out>, _t2=<optimized out>)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/redhat-linux-build/src/qmlmodels/QmlModels_autogen/include/moc_qqmlobjectmodel_p.cpp:279
#34 0x00007f60c1ebfc7d in non-virtual thunk to QQmlDelegateModelPrivate::emitModelUpdated(QQmlChangeSet const&, bool) ()
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qmlmodels/qqmldelegatemodel_p_p.h:303
#35 0x00007f60c1ec4c5b in QQmlDelegateModelGroupPrivate::emitModelUpdated
    (this=0x3fe8eea0, reset=reset@entry=true)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qmlmodels/qqmldelegatemodel.cpp:2875
#36 0x00007f60c1ec7178 in QQmlDelegateModelPrivate::emitChanges (this=this@entry=0x3e8398e0)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qmlmodels/qqmldelegatemodel.cpp:1893
#37 0x00007f60c1ed49c7 in QQmlDelegateModel::handleModelReset (this=<optimized out>)
    at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qmlmodels/qqmldelegatemodel.cpp:1974
#38 0x00007f60be3fc8f2 in QtPrivate::QSlotObjectBase::call
    (this=0x3fef60b0, r=<optimized out>, a=0x7ffd85f85120)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobjectdefs_impl.h:469
#39 doActivate<false> (sender=0x3ed91820, signal_index=21, argv=0x7ffd85f85120)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4086
#40 0x00007f60be3f2bc7 in QMetaObject::activate
    (sender=<optimized out>, m=m@entry=0x7f60be88efe0, local_signal_index=local_signal_index@entry=18, argv=argv@entry=0x7ffd85f85120)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4146
#41 0x00007f60be6074f0 in QAbstractItemModel::modelReset (this=<optimized out>, _t1=...)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/redhat-linux-build/src/corelib/Core_autogen/include/moc_qabstractitemmodel.cpp:1112
#42 0x00000000005c9d83 in MessageContentModel::resetModel (this=<optimized out>)
    at /home/nate/kde/src/neochat/src/models/messagecontentmodel.cpp:411
#43 0x00000000005cacea in operator() (__closure=0x3be45460, eventId=<optimized out>)
    at /home/nate/kde/src/neochat/src/models/messagecontentmodel.cpp:177
#44 operator()<QString> (__closure=0x3be45460)
    at /home/nate/kde/usr/include/Quotient/qt_connection_util.h:38
#45 QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<const QString&>, void, Quotient::_impl::connect<(Quotient::_impl::ConnectionType)1, NeoChatRoom, void (NeoChatRoom::*)(const QString&), MessageContentModel, MessageContentModel::getEvent()::<lambda(const QString&)> >(NeoChatRoom*, void (NeoChatRoom::*)(const QString&), MessageContentModel*, MessageContentModel::getEvent()::<lambda(const QString&)>, Qt::ConnectionType)::<lambda(const auto:67& ...)> >::call
    (f=..., arg=<optimized out>) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:137
#46 QtPrivate::FunctorCallable<Quotient::_impl::connect<(Quotient::_impl::ConnectionType)1, NeoChatRoom, void (NeoChatRoom::*)(const QString&), MessageContentModel, MessageContentModel::getEvent()::<lambda(const QString&)> >(NeoChatRoom*, void (NeoChatRoom::*)(const QString&), MessageContentModel*, MessageContentModel::getEvent()::<lambda(const QString&)>, Qt::ConnectionType)::<lambda(const auto:67& ...)>, const QString&>::call<QtPrivate::List<QString const&>, void>
    (f=..., arg=<optimized out>) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:345
#47 QtPrivate::QCallableObject<Quotient::_impl::connect<(Quotient::_impl::ConnectionType)1, NeoChatRoom, void (NeoChatRoom::*)(const QString&), MessageContentModel, MessageContentModel::getEvent()::<lambda(const QString&)> >(NeoChatRoom*, void (NeoChatRoom::*)(const QString&), MessageContentModel*, MessageContentModel::getEvent()::<lambda(const QString&)>, Qt::ConnectionType)::<lambda(const auto:67& ...)>, QtPrivate::List<const QString&>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *)
    (which=<optimized out>, this_=0x3be45450, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:555
#48 0x00007f60be3fc8f2 in QtPrivate::QSlotObjectBase::call
    (this=0x3be45450, r=<optimized out>, a=0x7ffd85f852a0)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobjectdefs_impl.h:469
#49 doActivate<false> (sender=0x3d74b540, signal_index=88, argv=0x7ffd85f852a0)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4086
#50 0x00007f60be3f2bc7 in QMetaObject::activate
    (sender=sender@entry=0x3d74b540, m=m@entry=0x8329e0 <NeoChatRoom::staticMetaObject>, local_signal_index=local_signal_index@entry=21, argv=argv@entry=0x7ffd85f852a0)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4146
#51 0x000000000055b77f in NeoChatRoom::extraEventLoaded (this=<optimized out>, _t1=...)
    at /home/nate/kde/build/neochat/src/neochat_autogen/include/moc_neochatroom.cpp:1288
#52 operator() (__closure=0x3ed91930) at /home/nate/kde/src/neochat/src/neochatroom.cpp:1790
#53 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, NeoChatRoom::downloadEventFromServer(const QString&)::<lambda()> >::call (f=..., arg=<optimized out>)
    at /usr/include/qt6/QtCore/qobjectdefs_impl.h:137
#54 QtPrivate::FunctorCallable<NeoChatRoom::downloadEventFromServer(const QString&)::<lambda()> >::call<QtPrivate::List<>, void> (f=..., arg=<optimized out>)
    at /usr/include/qt6/QtCore/qobjectdefs_impl.h:345
#55 QtPrivate::QCallableObject<NeoChatRoom::downloadEventFromServer(const QString&)::<lambda()>, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *)
    (which=<optimized out>, this_=0x3ed91920, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:555
#56 0x00007f60be3fc8f2 in QtPrivate::QSlotObjectBase::call
    (this=0x3ed91920, r=<optimized out>, a=0x7ffd85f853f0)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobjectdefs_impl.h:469
#57 doActivate<false> (sender=0x3eced770, signal_index=10, argv=0x7ffd85f853f0)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4086
#58 0x00007f60be3f2bc7 in QMetaObject::activate
    (sender=<optimized out>, m=m@entry=0x7f60c0c7adc0, local_signal_index=local_signal_index@entry=7, argv=argv@entry=0x7ffd85f853f0)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4146
#59 0x00007f60c0ae9752 in Quotient::BaseJob::success
    (this=<optimized out>, _t1=<optimized out>)
    at /home/nate/kde/build/libquotient/QuotientQt6_autogen/T4CFEN5LXH/moc_basejob.cpp:564
#60 0x00007f60c0baff95 in Quotient::BaseJob::finishJob (this=0x3eced770)
    at /home/nate/kde/src/libquotient/Quotient/jobs/basejob.cpp:641
#61 0x00007f60be3fc8f2 in QtPrivate::QSlotObjectBase::call
    (this=0x3f7dc070, r=<optimized out>, a=0x7ffd85f85548)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobjectdefs_impl.h:469
#62 doActivate<false> (sender=0x3e9ffb70, signal_index=12, argv=0x7ffd85f85548)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4086
#63 0x00007f60be3f2bc7 in QMetaObject::activate
    (sender=sender@entry=0x3e9ffb70, m=m@entry=0x7f60bebf1680, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x0)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4146
#64 0x00007f60bea8f1c7 in QNetworkReply::finished (this=this@entry=0x3e9ffb70)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/redhat-linux-build/src/network/Network_autogen/include/moc_qnetworkreply.cpp:435
#65 0x00007f60beb38e01 in QNetworkReplyHttpImplPrivate::finished (this=0x3f1a1550)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/network/access/qnetworkreplyhttpimpl.cpp:2147
#66 0x00007f60be3eddcb in QObject::event (this=0x3e9ffb70, e=0x7f603015be70)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:1452
#67 0x00007f60bf78b218 in QApplicationPrivate::notify_helper
    (this=<optimized out>, receiver=0x3e9ffb70, e=0x7f603015be70)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/widgets/kernel/qapplication.cpp:3287
#68 0x00007f60be396e88 in QCoreApplication::notifyInternal2
    (receiver=0x3e9ffb70, event=0x7f603015be70)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qcoreapplication.cpp:1142
#69 0x00007f60be3970ed in QCoreApplication::sendEvent
    (receiver=<optimized out>, event=<optimized out>)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qcoreapplication.cpp:1583
#70 0x00007f60be39ac51 in QCoreApplicationPrivate::sendPostedEvents
    (receiver=0x0, event_type=0, data=0x3b1f37a0)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qcoreapplication.cpp:1940
#71 0x00007f60be39aefd in QCoreApplication::sendPostedEvents
    (receiver=<optimized out>, event_type=<optimized out>)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qcoreapplication.cpp:1797
#72 0x00007f60be6859ef in postEventSourceDispatch (s=0x3b342a90)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:244
#73 0x00007f60bb90ee8c in g_main_dispatch (context=0x7f60a4000f00) at ../glib/gmain.c:3344
#74 g_main_context_dispatch_unlocked (context=0x7f60a4000f00) at ../glib/gmain.c:4152
#75 0x00007f60bb970c98 in g_main_context_iterate_unlocked.isra.0
    (context=context@entry=0x7f60a4000f00, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4217
#76 0x00007f60bb910383 in g_main_context_iteration (context=0x7f60a4000f00, may_block=1)
    at ../glib/gmain.c:4282
#77 0x00007f60be6851a3 in QEventDispatcherGlib::processEvents (this=0x3b1d6320, flags=...)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:394
#78 0x00007f60be3a3bc3 in QEventLoop::exec (this=this@entry=0x7ffd85f85ac0, flags=..., 
    flags@entry=...)
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/global/qflags.h:34
#79 0x00007f60be39fa7c in QCoreApplication::exec ()
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/global/qflags.h:74
#80 0x00007f60bedd66ed in QGuiApplication::exec ()
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/gui/kernel/qguiapplication.cpp:1926
#81 0x00007f60bf78b189 in QApplication::exec ()
    at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/widgets/kernel/qapplication.cpp:2555
#82 0x000000000043a011 in main (argc=<optimized out>, argv=<optimized out>)
    at /home/nate/kde/src/neochat/src/main.cpp:308
Comment 1 Bug Janitor Service 2024-11-09 23:49:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1973
Comment 2 Joshua Goins 2024-11-10 15:28:55 UTC
Git commit 5ef66b5cf656717b335b586a81ffe4112e37f60b by Joshua Goins.
Committed on 10/11/2024 at 15:16.
Pushed by redstrate into branch 'master'.

PollHandler: Ensure that m_pollStartEvent is always initialized to null

Otherwise it may be undefined, and we DO create default-constructed
PollHandler. For example, one is used as a fallback poll object
in NeoChatRoom::poll.

This is blind fix for a pretty nasty poll-related crash we saw a few
months ago.

M  +1    -1    src/pollhandler.h

https://invent.kde.org/network/neochat/-/commit/5ef66b5cf656717b335b586a81ffe4112e37f60b
Comment 3 Joshua Goins 2024-11-10 15:29:38 UTC
Git commit 258312e79895886f3e94576e38f9315be195ed89 by Joshua Goins.
Committed on 10/11/2024 at 15:29.
Pushed by redstrate into branch 'release/24.12'.

PollHandler: Ensure that m_pollStartEvent is always initialized to null

Otherwise it may be undefined, and we DO create default-constructed
PollHandler. For example, one is used as a fallback poll object
in NeoChatRoom::poll.

This is blind fix for a pretty nasty poll-related crash we saw a few
months ago.
(cherry picked from commit 5ef66b5cf656717b335b586a81ffe4112e37f60b)

M  +1    -1    src/pollhandler.h

https://invent.kde.org/network/neochat/-/commit/258312e79895886f3e94576e38f9315be195ed89